--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "sherman-physics-portfolio",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
-
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.0",
     "framer-motion": "^11.5.0",
     "react": "^18.2.0",
@@ -14,7 +13,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.12.0",
     "styled-components": "^6.1.0",
-    "web-vitals": "^3.5.0"
+    "web-vitals": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +43,11 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
+  },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31",
+    "webpack-dev-server": "^4.15.1",
+    "svgo": "^2.8.0"
   }
 }
